# Lab_TLN3

./: .gitignore  LICENSE  Lab1.ipynb  Lab2.ipynb  Lab3.ipynb  README.md  esercizio 1.md  esercizio 2.md  esercizio 3.md  esercizio 4.md  esercizio 5.md  main.py  pyproject.toml
archive/: annotation_dataset_human.csv  annotation_dataset_human.xlsx  captioning.ipynb  dataset_definizioni_TLN_25.xlsx
archive/basicness_AnnotazionI/: annotation1.xlsx  annotation10.xlsx  annotation11.xlsx  annotation12.xlsx  annotation13.xlsx  annotation14.xlsx  annotation15.xlsx  annotation16.xlsx  annotation2.xlsx  annotation3.xlsx  annotation4.xlsx  annotation5.xlsx  annotation6.xlsx  annotation7.xlsx  annotation8.xlsx  annotation9.xlsx
archive/osfstorage-archive/: MBCDI_concsFeats_2022-07-14.csv  MBCDI_concs_2022-07-14.csv  MCSM_LLAMA_feats_2022-07-14.csv  remainingUKCDI_concsFeats.csv
data/: dataset_definizioni_Lab2.CSV  dictionaryLab3.csv  goals.csv  semcor_index.sqlite3  semcor_structure.md
data/dataset_articles/: article_1.json  article_10.json  article_100.json  article_1000.json  article_10000.json  article_100000.json  article_100001.json  article_100002.json  article_100003.json  article_100004.json  article_100005.json  article_100006.json  article_100007.json  article_100008.json  article_100009.json  article_10001.json  article_100010.json  (+118422 more)
outputs/: content_to_form_results.csv
scripts/: db_structure.py  generate_goals.py  install_torch.py
src/: __init__.py  content_to_form.py  embeddings.py  evaluation.py  lab2_utils.py  lesk.py  utils.py  wordnet_helpers.py
